fix alignment issue with images

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -114,7 +114,10 @@ img{
 .tom-image{
   position: absolute;
   bottom: 16%;
-  left: 47%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
   transform: translate(-50%, -50%);
   animation-name: floating;
   animation-duration: 3s;
